--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,7 @@ a {
 	text-align: center;
 }
 .nav-item > a {
+	cursor: pointer;
 	color: #ffffff;
 }
 .nav-item > a.active {
@@ -133,9 +134,8 @@ header{
 .advantages-right {
 	width: 32%;
 	background: url(../img/advantages.png) no-repeat;
-	background-size: contain;
+	background-size: cover;
 	background-position: left;
-	height: auto;
 }
 .advantages-subtitle{
 	font-size: 20px;
@@ -230,6 +230,7 @@ header{
 		border: none;
 		background: none;
 		color: #ffffff;
+		outline: none;
 	}
 	.section-title {
 		font-size: 2.5rem;
@@ -245,7 +246,8 @@ header{
 	}
 	.advantages-right {
 		width: 100%;
-		height: 200px;
+		height: 300px;
 		background-position: center;
+		background-size: contain;
 	}
 }
